# api

./: .dockerignore  .env  .env.example  .eslintignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.dev  README.md  docker-compose.prod.yml  docker-compose.yml  heroku.yml  package-lock.json  package.json  requirements.txt  testAPI.html
.github/workflows/: build.yml  release.yml  test.yml
conf/: CMakeLists.txt
godbox/: README.md
heroku_deploy/: heroku.yml
heroku_deploy/api/: .env.example  .eslintignore  Dockerfile.api  Dockerfile.dev  Dockerfile.mongo  package.json
heroku_deploy/frontend/: Dockerfile  Dockerfile.frontend  nginx.conf  tsconfigt.json
heroku_deploy/godbox/: Dockerfile.godbox
heroku_deploy/mongo/: .dockerignore  Dockerfile.mongo  test.json
heroku_deploy/mongo/conf/: CMakeLists.txt
picspy-godbox/: Dockerfile
src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts  cli.ts  main.ts
src/atempt/: attempt.schema.ts  attempts.controller.ts  attempts.module.ts  attempts.service.ts
src/attempt/: attempt.schema.ts  attempts.controller.ts  attempts.module.ts  attempts.service.ts
src/attempts/: attempt.schema.ts  attempts.controller.ts  attempts.module.ts  attempts.service.ts
src/auth/: auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  constants.ts  jwt.strategy.ts  local.strategy.ts
src/challenges/: challenge.schema.ts  challenges.controller.ts  challenges.module.ts  challenges.service.ts
src/common/: generic-sanitizer.spec.ts
src/db/: db.config.ts
src/exec-server/: languages-phases.ts  (+3 more)
(+230 files in other folders)
